--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -13,7 +13,7 @@ $colors: (
   "black": ($black, $white),
   "light": ($light, $light-invert),
   "dark": ($dark, $dark-invert),
-  "primary": ($primary, #000),
+  "primary": ($primary, $primary-invert),
   "info": ($info, $info-invert),
   "success": ($success, $success-invert),
   "warning": ($warning, $warning-invert),
