--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -4,6 +4,7 @@
     max-width:100% !important;
     margin:0;
     padding:0;
+    background: #0b1a77;
   }
 }
 .site-layout-width-full:not(.posts-theme-columns){
