vars.scss background color test

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -2,7 +2,7 @@
 @import "~bulma/sass/utilities/_all";
 
 // Set your colors
-$primary: #071972;
+$primary: #2c79ff;
 $primary-invert: findColorInvert($primary);
 $twitter: #4099FF;
 $twitter-invert: findColorInvert($twitter);
@@ -25,3 +25,7 @@ $colors: (
 $link: $primary;
 $link-invert: $primary-invert;
 $link-focus-border: $primary;
+
+body {
+  background: rgb(2, 13, 82);
+}
