--- a/assets/scss/_transitions.scss
+++ b/assets/scss/_transitions.scss
@@ -16,7 +16,7 @@
 
 .image{
   overflow:hidden;
-  background:#000;
+  background: transparent;
 }
 .opti-image{
   transition: 0.2s ease opacity, 0.2s ease filter;
