--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -12,7 +12,7 @@ $colors: (
   "white": ($white, $black),
   "black": ($black, $white),
   "light": ($light, $light-invert),
-  "dark": ($dark, $dark-invert),
+  "dark": ($primary-invert, $primary),
   "primary": ($primary, $primary-invert),
   "info": ($info, $info-invert),
   "success": ($success, $success-invert),
