content plus body

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -9,7 +9,8 @@
 
 body {
     background-color: darkblue;
+    color:cyan;
 }
 .content h1, .content h2, .content h3, .content h4, .content h6 {
-    color:cyan;
+    color:white;
 }
