clean and navbar text color

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -11,6 +11,14 @@ body {
     background-color: darkblue;
     color:cyan;
 }
+
 .content h1, .content h2, .content h3, .content h4, .content h6 {
     color:white;
+}
+
+.message.is-dark .message-header {
+
+    background-color: aqua;
+    color: darkblue;
+
 }
